--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -59,7 +59,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 3\n"
@@ -73,7 +73,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 4\n"
@@ -87,7 +87,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 1\n"
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " HelloWorld!!\n"
@@ -348,10 +348,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*     *\n",
+      "**   **\n",
+      "* * * *\n",
+      "*  *  *\n",
+      "*     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "        for j in range(7):\n",
+    "            if j == 0 or j == 6 or (i == j and j < 4) or (i + j == 6 and j > 2):\n",
+    "                print(\"*\", end=\"\")\n",
+    "            else:\n",
+    "                print(\" \", end=\"\")\n",
+    "        print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -429,7 +449,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 6\n"
@@ -471,7 +491,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 15\n"
@@ -485,7 +505,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 9\n"
@@ -499,7 +519,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 24\n"
@@ -513,7 +533,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 0\n"
@@ -561,7 +581,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 15\n"
@@ -693,7 +713,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the amount you want to withdraw\n",
@@ -708,7 +728,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the amount you want to withdraw\n",
@@ -723,7 +743,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the amount you want to withdraw\n",
@@ -738,7 +758,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the amount you want to withdraw\n",
@@ -834,7 +854,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " asdf\n"
@@ -848,7 +868,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " valid\n"
@@ -975,7 +995,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " password\n"
@@ -989,7 +1009,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " wront\n"
@@ -1003,7 +1023,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " ThisIsTRUEPASSWORD\n"
@@ -1038,7 +1058,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " 5\n"
@@ -1079,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
