Add solved assignments

--- a/Assignments/Assignment 1.ipynb
+++ b/Assignments/Assignment 1.ipynb
@@ -1090,6 +1090,312 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating Average of Numbers Using Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avg(*args):\n",
+    "  avgg = 0\n",
+    "  for e in args:\n",
+    "    avgg += e\n",
+    "  return avgg / len(args)\n",
+    "\n",
+    "print(avg(1, 5, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checking if a Number is Prime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isPrime(x):\n",
+    "  if x < 2:\n",
+    "    return False\n",
+    "  i = 2\n",
+    "  while i*i <= x:\n",
+    "    if x%i==0:\n",
+    "      return False\n",
+    "    i += 1\n",
+    "  return True\n",
+    "\n",
+    "print(isPrime(7), isPrime(8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding the Longest Word in a List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaaaaaaaaaaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(ar):\n",
+    "    mx, wor = 0, \"\"\n",
+    "    for w in ar:\n",
+    "        if len(w) > mx:\n",
+    "            mx = len(w)\n",
+    "            wor = w\n",
+    "    return wor\n",
+    "\n",
+    "print(f([\"apple\", \"banana\", \"aaaaaaaaaaaaaaaa\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting Temperature Units"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.77777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "def FtoC(deg):\n",
+    "    return (deg-32) / 1.8\n",
+    "\n",
+    "print(FtoC(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generating a List of Squares Using List Comprehension and Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4 9 16 25 36 49 64 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\n",
+    "    *[x*x for x in range(1, 10)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Converting a List of Strings to Uppercase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAA BBB CCC\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(ar):\n",
+    "    return [w.upper() for w in ar]\n",
+    "\n",
+    "print(\n",
+    "    *f([\"aaaa\", \"bbb\", \"ccc\"])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating the Total Price Including Tax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11399.999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(price):\n",
+    "    return price * 1.14 # add 14% tax\n",
+    "\n",
+    "print(f(10000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding the Minimum and Maximum Values in a List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(ar):\n",
+    "    mx, mn = -1e9, 1e9\n",
+    "    for e in ar:\n",
+    "        if e > mx:\n",
+    "            mx = e\n",
+    "        if e < mn:\n",
+    "            mn = e\n",
+    "    return mn, mx\n",
+    "\n",
+    "print(*f([1, 2, 5, 45, 4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Checking if a String is a Valid Email Address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isValid(s):\n",
+    "    dict = {}\n",
+    "    for c in s:\n",
+    "        if c not in dict:\n",
+    "            dict[c] = 1\n",
+    "        else:\n",
+    "            dict[c] += 1\n",
+    "    return '@' in dict.keys() and dict['@'] == 1 and '.' in dict.keys()\n",
+    "\n",
+    "print(isValid('test@gmail.com'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Counting the Frequency of Each Character in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 2) ('b', 3) ('u', 3) ('c', 2) ('l', 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(s):\n",
+    "    dic = {}\n",
+    "    for c in s:\n",
+    "        if c not in dic:\n",
+    "            dic[c] = 1\n",
+    "        else:\n",
+    "            dic[c] += 1\n",
+    "    return [(k, v) for k, v in dic.items()]\n",
+    "\n",
+    "print(\n",
+    "    *f(\"aabbbuuuccll\")\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
